# RepomendMe

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile.api  README.md  TODO.md  considerations.md  inspirations.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publicTodo.md  pyproject.toml  render.yaml  seed.md
.github/workflows/: ci.yml  embed.yml  ping.yml  seed.yml  trending.yml
apps/api/: pyproject.toml
apps/api/src/reporelay_api/: __init__.py  main.py
apps/mvp_api/src/reporelay_mvp_api/: main.py  webhooks.py
apps/site/: astro.config.local.mjs  astro.config.mjs  package.json  pnpm-lock.yaml  vercel.json
apps/site/src/layouts/: Base.astro
apps/site/src/lib/: api.ts
apps/site/src/pages/: explore.astro  index.astro  repo.astro
apps/site/src/pages/repo/[owner]/: [name].astro
apps/site/src/styles/: global.css
infra/: docker-compose.yml
infra/postgres/: Dockerfile
