[project]
name = "reporelay"
version = "0.0.0"
description = "RepoRelay monorepo root"
requires-python = ">=3.12"
readme = "README.md"

[tool.uv.workspace]
members = [
    "apps/api",
    "packages/core",
    "packages/ingest",
    "packages/engine",
]

[tool.uv.sources]
reporelay-core = { workspace = true }
reporelay-api = { workspace = true }
reporelay-ingest = { workspace = true }
reporelay-engine = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["reporelay_api", "reporelay_core", "reporelay_ingest", "reporelay_engine"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps", "packages"]
