[project]
name = "reporelay-api"
version = "0.0.0"
description = "RepoRelay FastAPI serving API"
requires-python = ">=3.12"

dependencies = [
    "reporelay-core",
    "reporelay-engine",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "redis>=5.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporelay_api"]
